Fix Virtual keyboard hiding login and signup dialogs on firefox

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -93,3 +93,7 @@ body {
 [automation-id="toolbar__task-list-button"] {
   display: none !important;
 }
+
+tui-dialog[data-size="fullscreen"] > .t-content {
+  padding-bottom: 20rem !important;
+}
